// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecules/Upload image UploadImageExample smoke-test 1`] = `
<div class="sc-ezGUZh fpAwaX">
  <label class="upload-image__label">
    Featured Image
  </label>
  <button variant="standard"
          colortheme="primary"
          type="button"
          class="sc-dkjKgF iJlhGR"
  >
    Upload an Image
  </button>
  <input data-testid="image-uploader"
         type="file"
         accept="image/*"
         style="display: none;"
  >
</div>
`;

exports[`Molecules/Upload image UploadImageWithFile smoke-test 1`] = `
<div class="sc-ezGUZh fpAwaX">
  <label class="upload-image__label">
    Featured Image
  </label>
  <img class="upload-image__preview"
       src="blob:http://127.0.0.1:6006/1d5e2a51-ede1-4a7b-81e7-13c7b4a4e30a"
       alt="hello.png"
  >
  <div class="upload-image__button-row">
    <button variant="outline"
            colortheme="primary"
            type="button"
            class="sc-dkjKgF hhKsHh"
    >
      Upload New
    </button>
    <button variant="outline"
            colortheme="primary"
            type="button"
            class="sc-dkjKgF hhKsHh"
    >
      Delete
    </button>
  </div>
  <input data-testid="image-uploader"
         type="file"
         accept="image/*"
         style="display: none;"
  >
</div>
`;
